app/assets/stylesheets/debates.scss
/* ... */
.bullet {
  color: $border;
}

// 04. New
// - - - - - - - - - - - - - - - - - - - - - - - - -

.debate-new {
  background: white;
  padding-top: rem-calc(24);

  .back {
    @include back;
  }

  h1 {
    clear: both;
    font-size: rem-calc(36);
    font-weight: bold;
    line-height: $line-height*2;
    margin-bottom: rem-calc(24);
  }

  .icon-debates {
    color: $debates;
    font-size: rem-calc(60);
    line-height: $line-height;
    opacity: .5;
  }

  h2 {
    clear: both;
    font-size: rem-calc(20);
    font-weight: bold;
    line-height: $line-height;
    margin: 0;
  }

  .recommendations {
    list-style-type: none;
    margin-left: 0;
    margin-top: rem-calc(24);

    li {
      font-size: rem-calc(12);
      margin: rem-calc(12) 0;

      &:before {
        color: $debates;
        content: "l ";
        font-family: "icons" !important;
      }
    }
  }
}

.debate-edit {
  @extend .debate-new;
}

// 05. Comments
// - - - - - - - - - - - - - - - - - - - - - - - - -

.comments {
  background: $white;
  background-repeat: repeat-x;
  padding-top: rem-calc(24);
  padding-bottom: rem-calc(96);

  h2 {
    margin: 0;
    font-weight: bold;

    span {
      font-size: rem-calc(18);
      font-weight: normal;
      opacity: .8;
    }
  }

  .comment {
    margin: rem-calc(6) 0;

    p {
      margin-bottom: 0;
    }

    .comment-votes {
      color: $text-medium;
      font-weight: lighter;
      margin: rem-calc(15) rem-calc(6) 0;

      a {
        color: $text-light;
        display: inline-block;
        vertical-align: top;

        &:hover {
          color: $text-medium;
        }
      }

      [class^="icon-"] {
        font-size: rem-calc(20);
        vertical-align: top;
      }
    }

    .comment-body {
      margin-left: rem-calc(42);

      p {
        font-size: rem-calc(14);
      }

      .reply {
        background: white;
        border: 1px solid $border;
        font-size: rem-calc(12);
        margin: rem-calc(6) 0;
        padding: rem-calc(6);

        .divider {
          color: $text-light;
        }
      }

      .comment-user {
        margin-top: rem-calc(6);
        padding: rem-calc(6) 0;

        @each $n in ("1", "2", "3","4", "5") {
          &.level-#{$n} {
            @if $n == "5" {
              background: $comment-level-5;
              padding: rem-calc(6) rem-calc(12);
            }
            @elseif $n == "1" {
              background: none;
              padding: rem-calc(6) rem-calc(12);
            }
            @else {
              background: $comment-official;
              padding: rem-calc(6) rem-calc(12);
            }
          }
        }

        &.is-author {
          background: $comment-author;
          padding: rem-calc(6) rem-calc(12);
        }

        &.is-admin {
          background: $comment-admin;
          padding: rem-calc(6) rem-calc(12);
        }

        &.is-moderator {
          @extend .is-admin;
        }

        &.level-5 {
          background: $comment-level-5;
          padding: rem-calc(6) rem-calc(12);
        }
      }
    }

    .is-deleted {
      background: $deleted;
      margin-left: rem-calc(42);
      padding: rem-calc(6) rem-calc(12);
    }

    .comment-children {
      border-left: 1px dashed $border;
      margin-left: rem-calc(42);
      padding-left: rem-calc(6);

      @media only screen and (max-width: 40em) {
        margin-left: rem-calc(16);
      }
    }

    .comment-info {
      color: $text-light;
      font-size: rem-calc(13);
      font-weight: lighter;
      margin-top: rem-calc(6);
      vertical-align: middle;

      span.user-name {
        color: $text;
        font-weight: bold;
      }
    }
  }
}

.faded {
  opacity: 0.4;
}

// 06. Flags
// - - - - - - - - - - - - - - - - - - - - - - - - -

.flag-content {

  .button {
    background: none;
    margin-bottom: 0;
    padding: 0;
  }
}

.flag-disable {
  color: $text-medium;
  line-height: rem-calc(24);
  vertical-align: middle;
}

.flag-active {
  @extend .flag-disable;
  color: $delete;
}

